--- a/Restreview/home.ejs
+++ b/Restreview/home.ejs
@@ -12,11 +12,12 @@
 
 
 <script>
-  document.write("<b>Current URL</b> : " + document.baseURI);
+  document.getElementById("urlinfo").textContent = document.baseURI;
 </script>
 
 
 <body>
+<b>Current URL:</b><span id="urlinfo"></span>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Restreview</a>
